fixed artist name not showing on artist page

--- a/client/src/components/ProductDetails.css
+++ b/client/src/components/ProductDetails.css
@@ -7,7 +7,10 @@
   color: #888888;
   font-size: 30px;
   font-weight: 300;
+}
 
+.product-details-title > p {
+  margin-bottom: 5px;
 }
 
 .product-details-image {
@@ -30,4 +33,15 @@
   border: 1px solid #F7AE4E;
   box-shadow: 5px 10px 18px #888888;
   margin: 40px
+}
+
+.product-datails-category {
+  color: #888888;
+  font-size: 20px;
+  text-align: center;
+ 
+}
+
+.product-datails-category  > p {
+  
 }
